--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -35,7 +35,7 @@
               <div class="col-md-10 col-lg-6 text-center text-md-left margins">
                 <div class="white-text">
                   <div class="wow fadeInLeft" data-wow-delay="0.3s">
-                    <h1 class="h1-responsive font-weight-bold mt-sm-5">Mais Proxímo</h1>
+                    <h1 class="h1-responsive font-weight-bold mt-sm-5">Mais Proxímo 4</h1>
                     <div class="h6">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem repellendus quasi fuga nesciunt
                       dolorum nulla magnam veniam sapiente, fugiat! Commodi sequi non animi ea dolor molestiae
